# atom-browser

./: .gitignore  Cargo.toml
.forgejo/workflows/: ci.yml  release.yml
app/: index.html  package-lock.json  package.json  vite.config.ts
app/scripts/: copy-release-to-website.mjs  upload-release-supabase.mjs
app/src/: App.tsx  index.css  main.tsx
app/src-tauri/: Cargo.toml  tauri.conf.json
app/src-tauri/capabilities/: default.json
app/src-tauri/src/: lib.rs  main.rs
app/src/components/: AddressBar.tsx  BrowserView.tsx  Settings.tsx  Sidebar.tsx  TabBar.tsx
app/src/components/ai/: AISummaryCard.tsx  CommandPalette.tsx  GenerativePanel.tsx  InsightCard.tsx
app/src/components/bookmarks/: BookmarkManager.tsx  FavoritesGrid.tsx
app/src/components/chrome/: AddressBar.tsx  BrowserView.tsx  Sidebar.tsx  TabBar.tsx
app/src/components/computeruse/: ActionFeed.tsx  ComputerUsePanel.tsx  SessionControls.tsx
app/src/components/connectors/: ConnectorCard.tsx  ConnectorDetail.tsx  ConnectorDirectory.tsx
app/src/components/cursor/: CursorProvider.tsx
app/src/components/dashboard/: AIBriefing.tsx  AgentSuggestions.tsx  BrandWordmark.tsx  Dashboard.tsx  NewsCard.tsx  NewsFeed.tsx  Omnibox.tsx  QuickAccess.tsx  SponsoredCard.tsx  TopStories.tsx
app/src/components/keychain/: CredentialRow.tsx  KeychainManager.tsx  SavePrompt.tsx
app/src/components/settings/: SettingsView.tsx
app/src/components/ui/: Badge.tsx  Button.tsx  Card.tsx  GlassPanel.tsx  IconButton.tsx  Input.tsx  Modal.tsx  Toggle.tsx  Tooltip.tsx
app/src/lib/: ai.ts  connectors.ts  motion.ts  news.ts  search.ts
app/src/stores/: bookmarks.ts  computeruse.ts  connectors.ts  keychain.ts  theme.ts
crates/atom-adblock/: Cargo.toml
crates/atom-adblock/src/: lib.rs
crates/atom-core/: Cargo.toml
crates/atom-core/src/: engine.rs  lib.rs  tab.rs
crates/atom-net/: Cargo.toml
crates/atom-net/src/: client.rs  lib.rs
crates/atom-network/: Cargo.toml
crates/atom-network/src/: circuit.rs  client.rs  lib.rs  relay.rs
crates/atom-search/: Cargo.toml
crates/atom-search/src/: aggregator.rs  lib.rs  main.rs  provider.rs
crates/atom-shield/: Cargo.toml
crates/atom-shield/src/: cloud.rs  lib.rs  script_analyzer.rs  threat.rs  url_classifier.rs
docs/: BUILD-AND-UPLOAD-INSTALLER.md  DOWNLOAD-BUTTON-WEBSITE.md  HOW-TO-GIVE-PEOPLE-THE-DOWNLOAD.md  MACOS-SIGN-AND-NOTARIZE.md  PACKAGING-AND-DOWNLOADS.md
