[workspace]
members = [
    "app/src-tauri",
    "crates/atom-core",
    "crates/atom-net",
    "crates/atom-adblock",
    "crates/atom-search",
    "crates/atom-shield",
    "crates/atom-network",
]
resolver = "2"

[workspace.package]
version = "0.1.0"
edition = "2021"
license = "MIT"
authors = ["Atom Browser Team"]

[workspace.dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["full"] }
anyhow = "1"
thiserror = "2"
tracing = "0.1"
tracing-subscriber = "0.3"
reqwest = { version = "0.12", default-features = false, features = ["rustls-tls", "json"] }
url = "2"
