[package]
name = "atom-browser-app"
description = "Atom Browser – a privacy-first, AI-secured web browser"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true
default-run = "atom-browser-app"

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = ["unstable"] }
tauri-plugin-opener = "2"
serde = { workspace = true }
serde_json = { workspace = true }
tokio = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
url = { workspace = true }

atom-core = { path = "../../crates/atom-core" }
atom-net = { path = "../../crates/atom-net" }
atom-adblock = { path = "../../crates/atom-adblock" }
atom-shield = { path = "../../crates/atom-shield" }
tauri-plugin-store = "2.4.2"
