[package]
name = "atom-core"
description = "Browser engine abstraction layer for Atom Browser"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true

[dependencies]
thiserror = { workspace = true }
url = { workspace = true }
serde = { workspace = true }
