[package]
name = "atom-net"
description = "Privacy-first networking stack for Atom Browser (Tokio + Rustls)"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true

[dependencies]
tokio = { workspace = true }
reqwest = { workspace = true }
url = { workspace = true }
thiserror = { workspace = true }
tracing = { workspace = true }
