[package]
name = "atom-search"
description = "Privacy-first meta-search engine for Atom Browser"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true

[[bin]]
name = "atom-search-server"
path = "src/main.rs"

[dependencies]
actix-web = "4"
reqwest = { workspace = true }
tokio = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }
tracing = { workspace = true }
url = { workspace = true }
scraper = "0.22"
async-trait = "0.1"
futures = "0.3"
tracing-subscriber = { workspace = true }
